// Run with `protoc --proto_path . --dart_out lib/src --java_out android/src/main/java --kotlin_out android/src/main/kotlin api.proto`
// ProxyApi doesn't support data class, use Protobuf instead.

syntax = "proto3";

option java_package = "dev.hebei.bluetooth_low_energy_android";
option java_outer_classname = "BluetoothLowEnergyApi";
option java_multiple_files = true;

message AdvertisementApi {
    optional string name = 1;
    repeated string service_uuids = 2;
    map<string, bytes> service_data = 3;
    repeated ManufacturerSpecificDataApi manufacturer_specific_data = 4;
}

message ManufacturerSpecificDataApi {
    int32 id = 1;
    bytes data = 2;
}